--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
+  <title>Book Reviews</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/jass.css">
 </head>
 
@@ -13,7 +14,7 @@
     <h1>
       User Registry
     </h1>
-    <!-- TODO: Add a comment describing the functionality of this helper -->
+    
     {{#if logged_in}}
     <nav>
       <button class="btn" id="logout">logout</button>
@@ -27,7 +28,7 @@
       
   </footer>
 
-  <!-- TODO: Add a comment describing the functionality of this helper -->
+ 
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
