--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,32 @@
-<h2>Login</h2>
+<h1 class="text-2xl font-bold-italic m-5 text-center animate-bounce">
+  Login to Review your Favorite Book!!
+</h1>
 
-<form class="form login-form">
-  <div class="form-group">
-    <label for="username-login">username:</label>
-    <input class="form-input" type="text" id="username-login" />
+<div class="flex justify-center">
+  <img src="images/openBook.jpg" alt=" an open book" class="  border-2 border-black rounded-md object-fill h-48 w-96">
+</div>
+
+<form class="form login-form flex flex-col items-center mt-8">
+
+  <div class="form-group  flex justify-center items-center">
+    <label for="username-login text-xl"></label>
+    <input class="form-input block m-3 text-sm text-slate-500 mr-4 py-2 px-4 rounded-full  text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-100 border-2 border-black
+    placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Username" type="text" id="username-login" />
   </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
+
+  <div class="form-group  flex justify-center items-center">
+    <label for="password-login text-xl"></label>
+    <input class="form-input block m-3 text-sm text-slate-500 mr-4 py-2 px-4 rounded-full text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-100 border-2 border-black
+   placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Password " type="password"
+      id="password-login" />
   </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
+
+  <div class="form-group animate-pulse">
+    <button
+      class="btn mx-auto m-5 px-10 py-4 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 text-xl hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2"
+      type="submit">LOGIN</button>
   </div>
 </form>
+</div>
 
 <script src="/js/login.js"></script>
