--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,16 @@
-<div id="cars">
-  {{#each users as |user| }}
+<div id="posts">
+  {{#each post as |post| }}
   <div class="row align-center mb-5">
     <div class="col-md-6">
-      <h2>{{{get_emoji}}} {{user.name}}</h2>
+      <h2>{{user_name}}</h2>
     </div>
     <div class="col-md-6">
-      <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
+      <h3>{{title}}</h3>
+    </div>
+    <div>
+      <h4>{{book_title}}</h4>
+      <p>{{text}}</p>
     </div>
   </div>
   {{/each}}
-
 </div>
