--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,8 @@
-<div id="cars">
-  {{#each users as |user| }}
-  <div class="row align-center mb-5">
-    <div class="col-md-6">
-      <h2>{{{get_emoji}}} {{user.name}}</h2>
-    </div>
-    <div class="col-md-6">
-      <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
-    </div>
+<div class="grid gap-4 grid-cols-2 ">
+ <div class="p-4 flex flex-col items-center ">
+    Search new books
   </div>
-  {{/each}}
-
+ <div class="p-4 flex flex-col items-center">
+   Old book reviews
+  </div>
 </div>
