--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,10 @@
-<div class="grid gap-4 grid-cols-2 ">
- <div class="p-4 flex flex-col items-center ">
-    Search new books
-  </div>
- <div class="p-4 flex flex-col items-center">
-   Old book reviews
-  </div>
+<div class="p-4 flex flex-col items-center ">
+  <h2>My Reviews</h2>
+</div>
+<button>
+  <a href="/userposts">My Posts</a>
+</button>
 
-  
 <div id="posts">
   {{#each posts as |post|}}
   <div class="row align-center mb-5">
