--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,10 +1,12 @@
+{{#each posts as |post|}}
 <div id = "post">
-    <h1>{{title}}</h1>
+    <h1>{{post.title}}</h1>
     <div>
-        {{text}}
+        {{post.text}}
     </div>
 </div>
 <div id = "bookInfo">
 
 </div>
+{{/each}}
 <script src="/js/post.js"></script>
