--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,12 +1,27 @@
 {{#each posts as |post|}}
 <div id = "post">
-    <h1>{{post.title}}</h1>
+    <h1>{{title}}</h1>
     <div>
-        {{post.text}}
+        {{text}}
     </div>
 </div>
-<div id = "bookInfo">
-
-</div>
 {{/each}}
+<div id = "bookInfo">
+</div>
+<h1>
+title: {{bookTitle}}
+</h1>
+<div>
+Author: {{bookAuthor}}
+</div>
+<div>
+
+Category: {{bookCategories}}
+</div>
+<div>
+Maturity: {{bookMaturity}}
+</div>
+<div>
+Descrption: {{bookDescription}}
+</div>
 <script src="/js/post.js"></script>
