--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,8 +8,8 @@
   <label for="bookSearch" class="block font-bold mb-2">Find a Book:</label>
   <div class="flex">
     <input type="text" id="bookSearch" name="bookSearch" class="w-full py-2 px-3 border border-gray-300 rounded-md focus:ring focus:ring-indigo-300" placeholder="Enter book title">
-    <button type="button" class="ml-3 btn bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
-      hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Find</button>
+    <button type="button" id = "bookSearchButton" class="ml-3 btn bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+      hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2"> Find</button>
   </div>
 </div>
 
@@ -36,3 +36,4 @@
     </div>
   </div>
 </div>
+<script src="/js/homepage.js"></script>
