--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -25,7 +25,7 @@
           <h3 class="text-xl m-5">{{post.title}} by {{post.user.user_name}}</h3>
         </div>
         <div>
-          <p class="inline italic ml-3">{{post.book.title}}</p>
+          <a href="/post/{{post.book.id}}" class="inline italic ml-3">{{post.book.title}}</a>
           <p class="inline "> by {{post.book.author}}</p>
           <p class="m-3">{{post.text}}</p>
         </div>
