--- a/views/partials/navBar.handlebars
+++ b/views/partials/navBar.handlebars
@@ -1,7 +1,7 @@
 <nav class="flex justify-between items-center">
     <p class="text-4xl font-bold text-black-500">Eat your heart out, Good Reads</p>
     <div>
-        <a href="../homepage.handlebars" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+        <a href="/" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
       hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Homepage</a>
         <button class="btn bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
       hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2"
