added a post route for creating new entry in database

--- a/views/postList.handlebars
+++ b/views/postList.handlebars
@@ -12,7 +12,7 @@
         </div>
         <div>
             <h4>{{post.book.author}}</h4>
-            
+            <h4>{{post.book.description}}</h4>
         </div>
     </div>
     {{/each}}
