--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="bg-gradient-to-b from-purple-500 to-teal-500">
+<body class="bg-gradient-to-b from-purple-500 to-teal-500 bg-opacity-50">
   <header class="flex justify-between items-center p-2">
     
 
