--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,13 +5,16 @@
 <div class="grid gap-4 grid-cols-2 m-5">
   <div class="p-4 flex flex-col ">
     <div>
-  <label for="bookSearch" class="block font-bold mb-2">Find a Book:</label>
-  <div class="flex">
-    <input type="text" id="bookSearch" name="bookSearch" class="w-full py-2 px-3 border border-gray-300 rounded-md focus:ring focus:ring-indigo-300" placeholder="Enter book title">
-    <button type="button" id = "bookSearchButton" class="ml-3 btn bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
-      hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2"> Find</button>
-  </div>
-</div>
+      <label for="bookSearch" class="block font-bold mb-2">Find a Book:</label>
+      <div class="flex">
+        <input type="text" id="bookSearch" name="bookSearch"
+          class="w-full py-2 px-3 border border-gray-300 rounded-md focus:ring focus:ring-indigo-300"
+          placeholder="Enter book title">
+        <button type="button" id="bookSearchButton" class="ml-3 btn bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+      hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">
+          Find</button>
+      </div>
+    </div>
 
   </div>
   <div class="p-4 flex flex-col border-double border-2 border-black">
@@ -20,15 +23,20 @@
 
     <div id="posts">
       {{#each dateFormatPost as |post|}}
-      <div class = "border-b-2 border-dashed border-gray-500">
-        <div>
-          <h3 class="text-xl m-5">{{post.title}} by {{post.user.user_name}}</h3>
+
+      <div class="max-w-sm rounded shadow-lg border border-gray mt-4">
+
+        <div class="px-6 py-2">
+
+          <h3 class="font-bold text-xl ">{{post.title}} by {{post.user.user_name}}</h3>
         </div>
-        <div>
-          <a href="/post/{{post.book.id}}" class="inline italic ml-3">{{post.book.title}}</a>
+
+        <div class="text-gray-700 px-6 py-2">
+          <a href="/post/{{post.book.id}}" class="inline italic">{{post.book.title}}</a>
           <p class="inline "> by {{post.book.author}}</p>
-          <p class="m-3">{{post.text}}</p>
+          <p class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">{{post.text}}</p>
         </div>
+
       </div>
       {{else}}
       <p>No posts available.</p>
