--- a/views/userPosts.handlebars
+++ b/views/userPosts.handlebars
@@ -3,19 +3,26 @@
 <div id="posts">
     {{#each postData as |post|}}
 
-    <div class="border-b-2 border-dashed border-gray-500">
-        <div>
-            <h3 class="text-xl m-5">{{post.title}} by {{user.user_name}}</h3>
-        </div>
-        <div>
-            <p class="inline italic ml-3">{{post.book.title}}</p>
-            <p class="inline"> by {{post.book.author}}</p>
-            <p class="m-3">{{post.text}}</p>
-        </div>
-    </div>
-    {{else}}
-    <p>No posts available.</p>
-    {{/each}}
+    <div class=" rounded shadow-2xl border border-gray m-5 bg-cyan-50">
 
-</div>
-<script src="../js/logout.js"></script>
+        <div class="px-6 py-2">
+            <div class="flex justify-between items-center">
+
+                <h3 class="font-bold text-xl ">{{post.title}} by {{post.user.user_name}}</h3>
+
+                <div class="text-right">
+                    <a href="/post/{{post.book.id}}" class=" underline inline italic">{{post.book.title}}</a>
+
+                    <p class="inline "> by {{post.book.author}}</p>
+                </div>
+            </div>
+            <p class="inline-block bg-gray-200 rounded-md px-3 py-1 mt-2 text-sm font-semibold text-gray-700 mr-2">
+                "{{post.text}}"</p>
+        </div>
+
+        {{else}}
+        <p>No posts available.</p>
+        {{/each}}
+
+    </div>
+    <script src="../js/logout.js"></script>
