--- a/views/createBook.handlebars
+++ b/views/createBook.handlebars
@@ -7,6 +7,7 @@
             <input class="form-input block m-3 text-sm text-slate-500 mr-4 py-2 px-4 rounded-full  text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-100 border-2 border-black 
     placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Book Title" type="text" id="book-title" />
 
-            <button>Submit</button>
+            <button id="addBook">Submit</button>
     </form>
 </div>
+<script src="/js/createBook.js"></script>
