--- a/views/partials/navBar.handlebars
+++ b/views/partials/navBar.handlebars
@@ -6,7 +6,7 @@
         <a href="/" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
       hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Homepage</a>
 
-    <a href="/makePost" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+    <a href="/createPost" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
       hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Create a Review</a>
 
     <a href="/userPosts" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
