connected create post to backend request handler

--- a/views/createBook.handlebars
+++ b/views/createBook.handlebars
@@ -1,3 +1,5 @@
+{{> navBar}}
+
 <div class=" flex flex-col items-center ">
     <h2>Enter a Book to Review</h2>
 
@@ -11,3 +13,4 @@
     </form>
 </div>
 <script src="/js/createBook.js"></script>
+<script src="../js/logout.js"></script>
