--- a/views/userPosts.handlebars
+++ b/views/userPosts.handlebars
@@ -3,26 +3,22 @@
 <div id="posts">
     {{#each postData as |post|}}
 
-    <div class=" rounded shadow-2xl border border-gray m-5 bg-cyan-50">
+    <div class=" rounded shadow-lg border border-gray mt-4 bg-cyan-50">
 
         <div class="px-6 py-2">
-            <div class="flex justify-between items-center">
 
-                <h3 class="font-bold text-xl ">{{post.title}} by {{post.user.user_name}}</h3>
+            <h3 class="font-bold text-xl ">{{post.title}} by {{post.user.user_name}}</h3>
+        </div>
 
-                <div class="text-right">
-                    <a href="/post/{{post.book.id}}" class=" underline inline italic">{{post.book.title}}</a>
-
-                    <p class="inline "> by {{post.book.author}}</p>
-                </div>
-            </div>
+        <div class="text-black px-6 py-2">
+            <a href="/post/{{post.book.id}}" class="inline italic underline">{{post.book.title}}</a>
+            <p class="inline "> by {{post.book.author}}</p>
             <p class="inline-block bg-gray-200 rounded-md px-3 py-1 mt-2 text-sm font-semibold text-gray-700 mr-2">
                 "{{post.text}}"</p>
         </div>
 
-        {{else}}
-        <p>No posts available.</p>
-        {{/each}}
-
     </div>
+    {{else}}
+    <p>No posts available.</p>
+    {{/each}}
     <script src="../js/logout.js"></script>
