styles homepage userposts and create books

--- a/views/createPost.handlebars
+++ b/views/createPost.handlebars
@@ -1,7 +1,7 @@
 {{> navBar}}
 
-<div class=" flex flex-col items-center ">
-    <h2>Create A Review</h2>
+<div class=" flex flex-col items-center p-7">
+    <h2 class="text-2xl font-bold-italic m-5 text-center">Create A Review</h2>
 
     <form class="form signup-form" id="post-submit">
 
