--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,7 +15,7 @@
 
   </div>
   <div class="p-4 flex flex-col border-double border-2 border-black shadow-2xl shadow">
-    <h3 class="underline text-2xl text-center">Reviews</h3>
+    <h3 class="underline text-2xl text-center">Your Reviews</h3>
 
 
     <div id="posts">
