--- a/views/createBook.handlebars
+++ b/views/createBook.handlebars
@@ -1,7 +1,7 @@
 {{> navBar}}
 
-<div class=" flex flex-col items-center ">
-    <h2>Enter a Book to Review</h2>
+<div class=" flex flex-col items-center p-10 ">
+    <h2 class="text-2xl font-bold-italic m-5 text-center ">Enter a Book to Review</h2>
 
     <form class="form signup-form">
         <div class="form-group">
@@ -9,7 +9,8 @@
             <input class="form-input block m-3 text-sm text-slate-500 mr-4 py-2 px-4 rounded-full  text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-100 border-2 border-black 
     placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Book Title" type="text" id="book-title" />
 
-            <button id="addBook">Submit</button>
+            <button id="addBook"
+                class="btn mx-auto px-10 py-4 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 text-xl hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Submit</button>
     </form>
 </div>
 <script src="/js/createBook.js"></script>
