fixed post handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,8 @@
       <div class="form-group">
         <label for="username-signup"></label>
         <input class="form-input block m-3 text-sm text-slate-500 mr-4 py-2 px-4 rounded-full  text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-100 border-2 border-black 
-    placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Username" type="text" id="username-signup" />
+    placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Username" type="text"
+          id="username-signup" />
       </div>
       <div class="form-group">
         <label for="email-signup"></label>
@@ -26,10 +27,13 @@
       <div class="form-group">
         <label for="password-signup"></label>
         <input class="form-input block m-3 text-sm text-slate-500 mr-4 py-2 px-4 rounded-full  text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-100 border-2 border-black
-    placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Password" type="text" type="password" id="password-signup" />
+    placeholder:italic placeholder:text-slate-400 sm:text-sm" placeholder="Password" type="password"
+          id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn mx-auto m-5 px-10 py-4 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 text-xl hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2" type="submit">SIGNUP</button>
+        <button
+          class="btn mx-auto m-5 px-10 py-4 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 text-xl hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2"
+          type="submit">SIGNUP</button>
       </div>
     </form>
   </div>
