--- a/views/partials/navBar.handlebars
+++ b/views/partials/navBar.handlebars
@@ -1,21 +1,22 @@
 <nav class="flex justify-between items-center">
-  <p class="text-4xl font-bold text-black-500 ml-4">Eat your heart out, Good Reads</p>
+  <p class="text-4xl font-bold text-black-500 ml-4">BookBuzz</p>
   <div>
     <nav class="flex justify-between items-center">
-      
-        <a href="/" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+
+      <a href="/" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
       hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Homepage</a>
 
-    <a href="/createPost" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
-      hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Create a Review</a>
+      <a href="/createPost" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+      hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Create a
+        Review</a>
 
-    <a href="/userPosts" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+      <a href="/userPosts" class="bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
       hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Your
-      Reviews</a>
+        Reviews</a>
 
-    <button class="btn bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
+      <button class="btn bg-sky-400 px-3 py-1 rounded-full mr-5 border border-purple-200 text-white
       hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2"
-      id="logout">Logout</button>
+        id="logout">Logout</button>
   </div>
 
 </nav>
