--- a/views/userPosts.handlebars
+++ b/views/userPosts.handlebars
@@ -4,25 +4,27 @@
     {{#each postData as |post|}}
 
 
-        <div class="px-6 py-2 w-1/3 rounded shadow-2xl border border-gray m-5 bg-cyan-50">
-            <div class="border-2 border-black px-5 py-2 bg-sky-100">
+    <div class="px-6 py-2 w-1/3 rounded shadow-2xl border border-gray m-5 bg-cyan-50">
+        <div class="border-2 border-black px-5 py-2 bg-sky-100">
 
-                <h3 class="font-bold text-xl ">{{post.title}} reviewed by {{post.user.user_name}}</h3>
+            <h3 class="font-bold text-xl ">{{post.title}} reviewed by {{post.user.user_name}}</h3>
+            <div>
+                <a href="/post/{{post.book.id}}" class=" underline inline italic">{{post.book.title}}</a>
 
-
+                <p class="inline "> by {{post.book.author}}</p>
             </div>
-            <p class="inline-block bg-gray-200 rounded-md px-3 py-1 mt-2 text-sm font-semibold text-gray-700 mr-2">
-                "{{post.text}}"</p>
+
         </div>
+        <p class="inline-block bg-gray-200 rounded-md px-3 py-1 mt-2 text-sm font-semibold text-gray-700 mr-2">
+            "{{post.text}}"</p>
+    </div>
 
-        {{else}}
-        <p>No posts available.</p>
-        {{/each}}
+    {{else}}
+    <p>No posts available.</p>
+    {{/each}}
 
 
 
 
-    
+
     <script src="../js/logout.js"></script>
-
-    
