updated issue with routes

--- a/views/createPost.handlebars
+++ b/views/createPost.handlebars
@@ -28,5 +28,5 @@
     </form>
 </div>
 
-<script src="../js/createPost.js"></script>
-<script src="../js/logout.js"></script>
+<script src="/js/createPost.js"></script>
+<script src="/js/logout.js"></script>
