--- a/views/createBook.handlebars
+++ b/views/createBook.handlebars
@@ -13,5 +13,5 @@
                 class="btn mx-auto px-10 py-4 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 text-xl hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Submit</button>
     </form>
 </div>
-<script src="/js/createBook.js"></script>
-<script src="../js/logout.js"></script>
+<script src="js/createBook.js"></script>
+<script src="js/logout.js"></script>
